--- a/index.html
+++ b/index.html
@@ -4,52 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculo</title>
+   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="style.css">
+
+    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="header-conteiner">
-            <img src="pato.webp" alt="" class="foto-perfil">
+        <div class="header-container">
+            <img src="/avatar.jpg" alt="avatar" class="foto-perfil">
             <div>
-                <h1>Gustavo Mártire</h1>
-                <p> Email: gustavobmartire@gmail.com / Fone: (43) 98479-4932</p>
-                <p> Linkedin: <a href="">Gustavo Mártire</a></p>
-                <p> GitHub: <a href="">Gustavo Mártire</a></p>
-
+                <h1><a href="https://github.com/gcamil0" target="_blank">Gustavo Mártire</a></h1>
+                <p>Email: gustavobmartire@gmail.com</p>
+                <p>Telefone: (43) 98422-4114</p>
             </div>
+
         </div>
     </header>
 
     <section id="sobre">
-        <h2>Sobre mmim</h2>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-
-
-
+        <h2>Sobre mim</h2>
+        <ul>
+            Futuro profissional em cibersegurança, atualmente cursasndo análise e desenvolvimento de sistemas
+        </ul>
     </section>
 
-    <section id="profissional">
-        <h2>Experiencia profissional</h2>
+    <section id="exp">
+        <h2>Experiência Profissional</h2>
+        <ul>
+            <li>MR Topografia (Auxiliar Admnistrativo)
+            <li>Técnico de computador (Autonomo)
+        </ul>
     </section>
 
     <section id="educacao">
         <h2>Educação</h2>
+        <ul>
+            <li>Ensino Médio
+            <li>Inglês (Intermediário)
+            <li>Técnico em Programação de sistemas
+            <li>Técnologo em Analise e Desenvolvimento de Sistemas (Em andamento)
+        </ul>
     </section>
 
     <section id="habilidades">
         <h2>Habilidades</h2>
+        <ul>
+            <li>Pensamento crítico e analítico
+            <li>Adaptatibilidade
+            <li>Trabalho em equipe
+            <li>Comunicação eficaz
+            <li>Gestão do tempo e organização
+        </ul>
     </section>
 
 
-
-    <footer>
-
-        <p>&copy; 2025 - Gustavo Mártire. Todos os direitos reservados. </p>
-
+    <footer> 
+        <p>&copy; 2025 - Gustavo Mártire. Todos os direitos reservados.</p>
 
     </footer>
 </body>
