--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header-container">
             <img src="/avatar.jpg" alt="avatar" class="foto-perfil">
             <div>
-                <h1><a href="https://github.com/gcamil0" target="_blank">Gustavo Mártire</a></h1>
+                <h1><a href="https://github.com/gustavomartire" target="_blank">Gustavo Mártire</a></h1>
                 <p>Email: gustavobmartire@gmail.com</p>
                 <p>Telefone: (43) 98422-4114</p>
             </div>
