--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img src="/avatar.jpg" alt="avatar" class="foto-perfil">
+            <img src="avatar.jpg" alt="avatar" class="foto-perfil">
             <div>
                 <h1><a href="https://github.com/GustavoMartire" target="_blank">Gustavo Mártire</a></h1>
                 <p>Email: gustavobmartire@gmail.com</p>
